--- a/vscode-continue-config.yaml
+++ b/vscode-continue-config.yaml
@@ -52,6 +52,18 @@ models:
       temperature: 0.7
       topP: 0.95
 
+  - name: GPT-OSS (General)
+    provider: openai
+    model: gpt-oss
+    apiBase: http://localhost:4000
+    apiKey: sk-1234-change-me-to-secure-key
+    roles:
+      - chat
+    defaultCompletionOptions:
+      contextLength: 8192
+      temperature: 0.5
+      topP: 0.95
+
   - name: DeepSeek Coder 33B (Autocomplete)
     provider: openai
     model: deepseek-coder
