--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -76,10 +76,18 @@ http {
             # Proxy to LiteLLM
             proxy_pass http://litellm_backend;
             
-            # CORS headers for browser access
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            # CORS headers - RESTRINGIDO A ORIGENES CONFIABLES
+            # Para desarrollo local, permite localhost
+            # Para producción, cambia '*' por tu dominio específico
+            set $cors_origin "";
+            if ($http_origin ~* "^https?://(localhost|127\.0\.0\.1|192\.168\.\d+\.\d+)(:\d+)?$") {
+                set $cors_origin $http_origin;
+            }
+            
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             
             if ($request_method = 'OPTIONS') {
                 return 204;
